--- a/src/App.css
+++ b/src/App.css
@@ -1,21 +1,24 @@
-#root {
-  max-width: 1280px;
+/* 요소 기본 스타일 초기화 */
+* {
+  margin: 0;
+  padding: 0;
   box-sizing: border-box;
-  text-align: center;
-  width: 100%;
-  height: 100%;
 }
 
+/* 브라우저 기본 스타일 초기화 */
+html,
 body {
-  font-family: 'Roboto', sans-serif;
-  width: 100vw;
+  height: 100%;
+  font-size: 16px;
   margin: 0;
 }
 
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
+body {
+  line-height: 1.5;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
+    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  color: #333;
+  background-color: #fff;
 }
